welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: ';' expected but 'return' found.
                            for (i <- 2 to num) {if (compt<T(j)) {T(i) = T(i-1); compt= compt+1} else {T(i)=T(i-1)+1;compt=1;j=j+1}} return T(num) } 
                                                                                                                                     ^