welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {var T = new Array[Int](num+1);T(1) = 1; var j = 1; var compt = 1;
                            for (i <- 2 to num) {if (compt<T(j)) {T(i) = T(i-1); compt= compt+1} else {T(i)=T(i-1)+1;compt=1;j=j+1}} return T(num) }